Fix contrast for form inputs
refs #3892

--- a/public/css/themes/solarized-dark.less
+++ b/public/css/themes/solarized-dark.less
@@ -143,7 +143,6 @@ textarea {
     }
   }
 
-
   .nav-itemxx{
     &:hover,
     &:hover > a,
@@ -264,5 +263,19 @@ textarea {
 
   ul.main-actions li a {
     color: @icinga-blue;
+  }
+}
+
+form {
+
+  input[type="text"],
+  input[type="password"],
+  input[type="number"],
+  input[type="datetime-local"],
+  input[type="date"],
+  input[type="time"],
+  textarea,
+  select {
+    color: @base02;
   }
 }
